--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Justin(der) Guitar
+email: justinder@guitar.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Meet Justinder — the South-Asian cousin Justin Guitar didn’t know it had.
+  Your friendly companion for learning guitar through Bollywood hits and tunes from the Indian and Pakistani music scene.
 baseurl: "/justin-der-guitar" # the subpath of your site, e.g. /blog
 url: "https://engineeredtoimperfection.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 theme: minima
